--- a/home/index.html
+++ b/home/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barış Kortun</title>
+    <link rel="stylesheet" href="/home/index.css">
 </head>
+
 <body>
-    <div>
-        <ul>
-            <tr>
-               <a href="../home/index.html">Homepage</a> 
-            </tr>
-            <tr>
-                <a href="../aboutMe/aboutMe.html">About Me</a>                 
-            </tr>
-            <tr>
-                <a href="../contact/contact.html">Contact</a>                 
-            </tr>
-            <tr>
-                <a href="../login/login.html">Login</a>                 
-            </tr>
-        </ul>
+    <div id="header">
+        <div class="container">
+            <div class="header-background">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="../home/index.html">Homepage</a>
+                    </li>
+                    <li>
+                        <a href="../aboutMe/aboutMe.html">About Me</a>
+                    </li>
+                    <li>
+                        <a href="../contact/contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="../login/login.html">Login</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+            <div class="header-text">
+                <p>Backend Developer</p>
+                <h1>Hi,I'm <span>Barış Kortun</span></h1>
+            </div>
+        </div>
     </div>
     <div>
         <p>Hello World! => Image gelecek</p>
         <img src="" alt="">
     </div>
 </body>
+
 </html>
