--- a/login/login.html
+++ b/login/login.html
@@ -4,10 +4,10 @@
     <div>
         <ul>
             <tr>
-               <a href="../home/index.html">Homepage</a> 
+               <a href="../home/index.html">Home</a> 
             </tr>
             <tr>
-                <a href="../aboutMe/aboutMe.html">About Me</a>                 
+                <a href="../about/about.html">About</a>                 
             </tr>
             <tr>
                 <a href="../contact/contact.html">Contact</a>                 
