--- a/home/index.html
+++ b/home/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barış Kortun</title>
     <link rel="stylesheet" href="/home/index.css">
+    <script src="https://kit.fontawesome.com/9b464bbe37.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -16,10 +18,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="../home/index.html">Homepage</a>
+                        <a href="../home/index.html">Home</a>
                     </li>
                     <li>
-                        <a href="../aboutMe/aboutMe.html">About Me</a>
+                        <a href="../about/about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="../projects/projects.html">My Projects</a>
                     </li>
                     <li>
                         <a href="../contact/contact.html">Contact</a>
@@ -35,10 +40,6 @@
                 <h1>Hi,I'm <span>Barış Kortun</span></h1>
             </div>
         </div>
-    </div>
-    <div>
-        <p>Hello World! => Image gelecek</p>
-        <img src="" alt="">
     </div>
 </body>
 
