Projects page was completed

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -37,7 +37,31 @@
             </div>
             <div id="projects">
                 <div class="container">
-
+                    <h1 class="sub-title">My Projects</h1>
+                    <div class="projects-list">
+                        <div>
+                            <h2>Blog Website</h2>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour, or randomised words which don't
+                                look even slightly believable. If you are going to use a passage of Lorem Ipsum, you
+                                need to</p>
+                            <a href="https://github.com/bkortun/AngularBlogBackend"><i
+                                    class="fa-solid fa-code"></i>Visit the code of backend</a><br>
+                            <a href="https://github.com/bkortun/AngularBlog"><i class="fa-solid fa-code"></i>visit the
+                                code of frontend</a>
+                        </div>
+                        <div>
+                            <h2>E-Commerce Website</h2>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour, or randomised words which don't
+                                look even slightly believable. If you are going to use a passage of Lorem Ipsum, you
+                                need to</p>
+                            <a href="https://github.com/bkortun/MobilyaApi"><i class="fa-solid fa-code"></i>visit the
+                                code of backend</a><br>
+                            <a href="https://github.com/bkortun/MobilyaClient"><i class="fa-solid fa-code"></i>visit the
+                                code of frontend</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
