--- a/home/index.html
+++ b/home/index.html
@@ -36,8 +36,9 @@
             </nav>
         </div>
             <div class="header-text">
+            <!-- <div class="spacialdesign specialdevision"> -->
                 <p>Backend Developer</p>
-                <h1>Hi,I'm <span>Barış Kortun</span></h1>
+                <h1>Hi, I'm <span>Barış Kortun</span></h1>
             </div>
         </div>
     </div>
