--- a/login/login.html
+++ b/login/login.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <div>
-        <ul>
-            <tr>
-               <a href="../home/index.html">Home</a> 
-            </tr>
-            <tr>
-                <a href="../about/about.html">About</a>                 
-            </tr>
-            <tr>
-                <a href="../contact/contact.html">Contact</a>                 
-            </tr>
-            <tr>
-                <a href="../login/login.html">Login</a>                 
-            </tr>
-        </ul>
-    </div>
-    <h3>Login Page</h3>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Barış Kortun</title>
+    <link rel="stylesheet" href="/login/login.css">
+    <script type="text/javascript" src="/login/login.js"></script>
+    <script src="https://kit.fontawesome.com/9b464bbe37.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h4>Email:</h4>
-    <input type="email" name="email" id="email">
-    <br>
-    <h4>Password:</h4>
-    <input type="password" name="password" id="password">
-    <br>
-    <input type="submit" value="Login">
+    <div id="header">
+        <div class="container">
+            <div class="header-background">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="../home/index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="../about/about.html">About</a>
+                        </li>
+                        <li>
+                            <a href="../projects/projects.html">My Projects</a>
+                        </li>
+                        <li>
+                            <a href="../contact/contact.html">Contact</a>
+                        </li>
+                        <li>
+                            <a href="../login/login.html">Login</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div id="login">
+                <div class="container">
+                    <h1 class="sub-title">Login</h1>
+                    <form>
+                        <input type="email" placeholder="Email" name="email" id="email">
+                        <input type="password" placeholder="Password" name="password" id="password">
+                        <br>
+                        <button type="submit" class="btn btn2">Login</button>
+                    </form>
+                </div>                
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
