Image was added and homepage was modified

--- a/about/about.html
+++ b/about/about.html
@@ -40,7 +40,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="about-col-1">
-                            <img src="">
+                            <img src="../assets/images/IMG-2826.jpg">
                         </div>
                         <div class="about-col-2">
                             <h1 class="sub-title">About Me</h1>
@@ -60,20 +60,20 @@
                             </div>
                             <div class="tab-contents active-tab" id="skills">
                                 <ul>
-                                    <li><span>C#</span><br>deneme deneme deneme</li>
-                                    <li><span>Java</span><br>deneme deneme deneme</li>
-                                    <li><span>JavaScript</span><br>deneme deneme deneme</li>
+                                    <li><span>C#</span><br>I have developed many projects using .Net technologies, I have a good competent of the programming language.</li>
+                                    <li><span>Java</span><br>I know syntax and general working logic.</li>
+                                    <li><span>JavaScript</span><br>I have developed projects with Angular framework, I do not know the subtleties and details</li>
                                 </ul>
                             </div>
                             <div class="tab-contents" id="education">
                                 <ul>
-                                    <li><span>2020-2025</span><br>deneme deneme deneme</li>
+                                    <li><span>2020-2025</span><br>Aydın Adnan Menderes Üniversitesi Bilgisayar Mühendisliği (İngilizce)</li>
                                 </ul>
                             </div>
                             <div class="tab-contents" id="references">
                                 <ul>
-                                    <li><span>deneme</span><br>deneme deneme deneme</li>
-                                    <li><span>deneme</span><br>deneme deneme deneme</li>
+                                    <li><span>blank</span><br>combined with a handful of model </li>
+                                    <li><span>blank</span><br>combined with a handful of model </li>
                                 </ul>
                             </div>
                         </div>
