--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barış Kortun</title>
-    <link rel="stylesheet" href="/home/index.css">
+    <link rel="stylesheet" href="home/index.css">
     <script src="https://kit.fontawesome.com/9b464bbe37.js" crossorigin="anonymous"></script>
 
 </head>
