--- a/projects/projects.html
+++ b/projects/projects.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barış Kortun</title>
-    <link rel="stylesheet" href="/projects/projects.css">
+    <link rel="stylesheet" href="projects/projects.css">
     <script type="text/javascript" src="/projects/projects.js"></script>
     <script src="https://kit.fontawesome.com/9b464bbe37.js" crossorigin="anonymous"></script>
 </head>
